# moddy-blog-article/api/article/v1/article_grpc.pb.go
@@ -1,0 +1,287 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.6.2
+// - protoc             v7.36.0
+// source: article/v1/article.proto
+
+package v1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	ArticleServer_CreateArticle_FullMethodName = "/article.v1.ArticleServer/CreateArticle"
+	ArticleServer_UpdateArticle_FullMethodName = "/article.v1.ArticleServer/UpdateArticle"
+	ArticleServer_DeleteArticle_FullMethodName = "/article.v1.ArticleServer/DeleteArticle"
+	ArticleServer_GetArticle_FullMethodName    = "/article.v1.ArticleServer/GetArticle"
+	ArticleServer_ListArticle_FullMethodName   = "/article.v1.ArticleServer/ListArticle"
+)
+
+// ArticleServerClient is the client API for ArticleServer service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// 文章服务 proto 文件
+type ArticleServerClient interface {
+	// 创建文章
+	CreateArticle(ctx context.Context, in *CreateArticleRequest, opts ...grpc.CallOption) (*CreateArticleReply, error)
+	// 根据 id 更新文章
+	UpdateArticle(ctx context.Context, in *UpdateArticleRequest, opts ...grpc.CallOption) (*UpdateArticleReply, error)
+	// 根据 id 删除文章
+	DeleteArticle(ctx context.Context, in *DeleteArticleRequest, opts ...grpc.CallOption) (*DeleteArticleReply, error)
+	// 根据 id 查询文章
+	GetArticle(ctx context.Context, in *GetArticleRequest, opts ...grpc.CallOption) (*GetArticleReply, error)
+	// 查询文章列表
+	ListArticle(ctx context.Context, in *ListArticleRequest, opts ...grpc.CallOption) (*ListArticleReply, error)
+}
+
+type articleServerClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewArticleServerClient(cc grpc.ClientConnInterface) ArticleServerClient {
+	return &articleServerClient{cc}
+}
+
+func (c *articleServerClient) CreateArticle(ctx context.Context, in *CreateArticleRequest, opts ...grpc.CallOption) (*CreateArticleReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(CreateArticleReply)
+	err := c.cc.Invoke(ctx, ArticleServer_CreateArticle_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *articleServerClient) UpdateArticle(ctx context.Context, in *UpdateArticleRequest, opts ...grpc.CallOption) (*UpdateArticleReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(UpdateArticleReply)
+	err := c.cc.Invoke(ctx, ArticleServer_UpdateArticle_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *articleServerClient) DeleteArticle(ctx context.Context, in *DeleteArticleRequest, opts ...grpc.CallOption) (*DeleteArticleReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(DeleteArticleReply)
+	err := c.cc.Invoke(ctx, ArticleServer_DeleteArticle_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *articleServerClient) GetArticle(ctx context.Context, in *GetArticleRequest, opts ...grpc.CallOption) (*GetArticleReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetArticleReply)
+	err := c.cc.Invoke(ctx, ArticleServer_GetArticle_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *articleServerClient) ListArticle(ctx context.Context, in *ListArticleRequest, opts ...grpc.CallOption) (*ListArticleReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ListArticleReply)
+	err := c.cc.Invoke(ctx, ArticleServer_ListArticle_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// ArticleServerServer is the server API for ArticleServer service.
+// All implementations must embed UnimplementedArticleServerServer
+// for forward compatibility.
+//
+// 文章服务 proto 文件
+type ArticleServerServer interface {
+	// 创建文章
+	CreateArticle(context.Context, *CreateArticleRequest) (*CreateArticleReply, error)
+	// 根据 id 更新文章
+	UpdateArticle(context.Context, *UpdateArticleRequest) (*UpdateArticleReply, error)
+	// 根据 id 删除文章
+	DeleteArticle(context.Context, *DeleteArticleRequest) (*DeleteArticleReply, error)
+	// 根据 id 查询文章
+	GetArticle(context.Context, *GetArticleRequest) (*GetArticleReply, error)
+	// 查询文章列表
+	ListArticle(context.Context, *ListArticleRequest) (*ListArticleReply, error)
+	mustEmbedUnimplementedArticleServerServer()
+}
+
+// UnimplementedArticleServerServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedArticleServerServer struct{}
+
+func (UnimplementedArticleServerServer) CreateArticle(context.Context, *CreateArticleRequest) (*CreateArticleReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method CreateArticle not implemented")
+}
+func (UnimplementedArticleServerServer) UpdateArticle(context.Context, *UpdateArticleRequest) (*UpdateArticleReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method UpdateArticle not implemented")
+}
+func (UnimplementedArticleServerServer) DeleteArticle(context.Context, *DeleteArticleRequest) (*DeleteArticleReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method DeleteArticle not implemented")
+}
+func (UnimplementedArticleServerServer) GetArticle(context.Context, *GetArticleRequest) (*GetArticleReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetArticle not implemented")
+}
+func (UnimplementedArticleServerServer) ListArticle(context.Context, *ListArticleRequest) (*ListArticleReply, error) {
+	return nil, status.Error(codes.Unimplemented, "method ListArticle not implemented")
+}
+func (UnimplementedArticleServerServer) mustEmbedUnimplementedArticleServerServer() {}
+func (UnimplementedArticleServerServer) testEmbeddedByValue()                       {}
+
+// UnsafeArticleServerServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to ArticleServerServer will
+// result in compilation errors.
+type UnsafeArticleServerServer interface {
+	mustEmbedUnimplementedArticleServerServer()
+}
+
+func RegisterArticleServerServer(s grpc.ServiceRegistrar, srv ArticleServerServer) {
+	// If the following call panics, it indicates UnimplementedArticleServerServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&ArticleServer_ServiceDesc, srv)
+}
+
+func _ArticleServer_CreateArticle_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateArticleRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ArticleServerServer).CreateArticle(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ArticleServer_CreateArticle_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ArticleServerServer).CreateArticle(ctx, req.(*CreateArticleRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ArticleServer_UpdateArticle_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateArticleRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ArticleServerServer).UpdateArticle(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ArticleServer_UpdateArticle_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ArticleServerServer).UpdateArticle(ctx, req.(*UpdateArticleRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ArticleServer_DeleteArticle_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteArticleRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ArticleServerServer).DeleteArticle(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ArticleServer_DeleteArticle_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ArticleServerServer).DeleteArticle(ctx, req.(*DeleteArticleRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ArticleServer_GetArticle_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetArticleRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ArticleServerServer).GetArticle(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ArticleServer_GetArticle_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ArticleServerServer).GetArticle(ctx, req.(*GetArticleRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ArticleServer_ListArticle_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListArticleRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ArticleServerServer).ListArticle(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ArticleServer_ListArticle_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ArticleServerServer).ListArticle(ctx, req.(*ListArticleRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// ArticleServer_ServiceDesc is the grpc.ServiceDesc for ArticleServer service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var ArticleServer_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "article.v1.ArticleServer",
+	HandlerType: (*ArticleServerServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "CreateArticle",
+			Handler:    _ArticleServer_CreateArticle_Handler,
+		},
+		{
+			MethodName: "UpdateArticle",
+			Handler:    _ArticleServer_UpdateArticle_Handler,
+		},
+		{
+			MethodName: "DeleteArticle",
+			Handler:    _ArticleServer_DeleteArticle_Handler,
+		},
+		{
+			MethodName: "GetArticle",
+			Handler:    _ArticleServer_GetArticle_Handler,
+		},
+		{
+			MethodName: "ListArticle",
+			Handler:    _ArticleServer_ListArticle_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "article/v1/article.proto",
+}
