# moddy-blog-article/api/article/v1/article_http.pb.go
@@ -1,0 +1,258 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v3.0.0
+// - protoc             v7.36.0
+// source: article/v1/article.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v3/transport/http"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+
+const _ = http.SupportPackageIsVersion3
+
+const OperationArticleServerCreateArticle = "/article.v1.ArticleServer/CreateArticle"
+const OperationArticleServerDeleteArticle = "/article.v1.ArticleServer/DeleteArticle"
+const OperationArticleServerGetArticle = "/article.v1.ArticleServer/GetArticle"
+const OperationArticleServerListArticle = "/article.v1.ArticleServer/ListArticle"
+const OperationArticleServerUpdateArticle = "/article.v1.ArticleServer/UpdateArticle"
+
+type ArticleServerHTTPServer interface {
+	// CreateArticle 创建文章
+	CreateArticle(context.Context, *CreateArticleRequest) (*CreateArticleReply, error)
+	// DeleteArticle 根据 id 删除文章
+	DeleteArticle(context.Context, *DeleteArticleRequest) (*DeleteArticleReply, error)
+	// GetArticle 根据 id 查询文章
+	GetArticle(context.Context, *GetArticleRequest) (*GetArticleReply, error)
+	// ListArticle 查询文章列表
+	ListArticle(context.Context, *ListArticleRequest) (*ListArticleReply, error)
+	// UpdateArticle 根据 id 更新文章
+	UpdateArticle(context.Context, *UpdateArticleRequest) (*UpdateArticleReply, error)
+}
+
+func RegisterArticleServerHTTPServer(s *http.Server, srv ArticleServerHTTPServer) {
+	r := s.Route("/")
+	r.Handle("POST", "/v1/article", _ArticleServer_CreateArticle0_HTTP_Handler(srv))
+	r.Handle("PUT", "/v1/article/{id}", _ArticleServer_UpdateArticle0_HTTP_Handler(srv))
+	r.Handle("DELETE", "/v1/article/{id}", _ArticleServer_DeleteArticle0_HTTP_Handler(srv))
+	r.Handle("GET", "/v1/article/{id}", _ArticleServer_GetArticle0_HTTP_Handler(srv))
+	r.Handle("GET", "/v1/article", _ArticleServer_ListArticle0_HTTP_Handler(srv))
+}
+
+func _ArticleServer_CreateArticle0_HTTP_Handler(srv ArticleServerHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in CreateArticleRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationArticleServerCreateArticle)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.CreateArticle(ctx, req.(*CreateArticleRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*CreateArticleReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _ArticleServer_UpdateArticle0_HTTP_Handler(srv ArticleServerHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in UpdateArticleRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationArticleServerUpdateArticle)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.UpdateArticle(ctx, req.(*UpdateArticleRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*UpdateArticleReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _ArticleServer_DeleteArticle0_HTTP_Handler(srv ArticleServerHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in DeleteArticleRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationArticleServerDeleteArticle)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.DeleteArticle(ctx, req.(*DeleteArticleRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*DeleteArticleReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _ArticleServer_GetArticle0_HTTP_Handler(srv ArticleServerHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetArticleRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationArticleServerGetArticle)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetArticle(ctx, req.(*GetArticleRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*GetArticleReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _ArticleServer_ListArticle0_HTTP_Handler(srv ArticleServerHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in ListArticleRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationArticleServerListArticle)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.ListArticle(ctx, req.(*ListArticleRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*ListArticleReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+type ArticleServerHTTPClient interface {
+	// CreateArticle 创建文章
+	CreateArticle(ctx context.Context, req *CreateArticleRequest, opts ...http.CallOption) (rsp *CreateArticleReply, err error)
+	// DeleteArticle 根据 id 删除文章
+	DeleteArticle(ctx context.Context, req *DeleteArticleRequest, opts ...http.CallOption) (rsp *DeleteArticleReply, err error)
+	// GetArticle 根据 id 查询文章
+	GetArticle(ctx context.Context, req *GetArticleRequest, opts ...http.CallOption) (rsp *GetArticleReply, err error)
+	// ListArticle 查询文章列表
+	ListArticle(ctx context.Context, req *ListArticleRequest, opts ...http.CallOption) (rsp *ListArticleReply, err error)
+	// UpdateArticle 根据 id 更新文章
+	UpdateArticle(ctx context.Context, req *UpdateArticleRequest, opts ...http.CallOption) (rsp *UpdateArticleReply, err error)
+}
+
+type ArticleServerHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewArticleServerHTTPClient(client *http.Client) ArticleServerHTTPClient {
+	return &ArticleServerHTTPClientImpl{client}
+}
+
+// CreateArticle 创建文章
+func (c *ArticleServerHTTPClientImpl) CreateArticle(ctx context.Context, in *CreateArticleRequest, opts ...http.CallOption) (*CreateArticleReply, error) {
+	var out CreateArticleReply
+	pattern := "/v1/article"
+	path := http.BuildPath(pattern, in)
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.ContentType("application/protojson"),
+		http.Operation(OperationArticleServerCreateArticle),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// DeleteArticle 根据 id 删除文章
+func (c *ArticleServerHTTPClientImpl) DeleteArticle(ctx context.Context, in *DeleteArticleRequest, opts ...http.CallOption) (*DeleteArticleReply, error) {
+	var out DeleteArticleReply
+	pattern := "/v1/article/{id}"
+	path := http.BuildPath(pattern, in, http.WithQueryParams())
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.Operation(OperationArticleServerDeleteArticle),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "DELETE", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// GetArticle 根据 id 查询文章
+func (c *ArticleServerHTTPClientImpl) GetArticle(ctx context.Context, in *GetArticleRequest, opts ...http.CallOption) (*GetArticleReply, error) {
+	var out GetArticleReply
+	pattern := "/v1/article/{id}"
+	path := http.BuildPath(pattern, in, http.WithQueryParams())
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.Operation(OperationArticleServerGetArticle),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// ListArticle 查询文章列表
+func (c *ArticleServerHTTPClientImpl) ListArticle(ctx context.Context, in *ListArticleRequest, opts ...http.CallOption) (*ListArticleReply, error) {
+	var out ListArticleReply
+	pattern := "/v1/article"
+	path := http.BuildPath(pattern, in, http.WithQueryParams())
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.Operation(OperationArticleServerListArticle),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// UpdateArticle 根据 id 更新文章
+func (c *ArticleServerHTTPClientImpl) UpdateArticle(ctx context.Context, in *UpdateArticleRequest, opts ...http.CallOption) (*UpdateArticleReply, error) {
+	var out UpdateArticleReply
+	pattern := "/v1/article/{id}"
+	path := http.BuildPath(pattern, in)
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.ContentType("application/protojson"),
+		http.Operation(OperationArticleServerUpdateArticle),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "PUT", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
